fix ScreenController bug